--- a/Translation Packages/Spriggit.Json.Skyrim/Spriggit.Json.Skyrim.csproj
+++ b/Translation Packages/Spriggit.Json.Skyrim/Spriggit.Json.Skyrim.csproj
@@ -7,6 +7,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="Noggog.CSharpExt" />
+        <PackageReference Include="Mutagen.Bethesda.Core" />
+        <PackageReference Include="Mutagen.Bethesda.Skyrim" />
         <PackageReference Include="Mutagen.Bethesda.Serialization" />
         <PackageReference Include="Mutagen.Bethesda.Serialization.Newtonsoft" />
         <PackageReference Include="Mutagen.Bethesda.Serialization.SourceGenerator" />
