--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -56,6 +56,9 @@
     <PackageVersion Include="Noggog.CSharpExt.Windows">
       <Version>[2.65.0-nightly-20240413-211475]</Version>
     </PackageVersion>
+    <PackageVersion Include="Noggog.GitRepository">
+      <Version>1.2.0</Version>
+    </PackageVersion>
     <PackageVersion Include="Noggog.Testing">
       <Version>[2.65.0-nightly-20240413-211475]</Version>
     </PackageVersion>
@@ -85,19 +88,19 @@
     <PackageVersion Include="NuGet.Versioning">
       <Version>6.7.0</Version>
     </PackageVersion>
-	  <PackageVersion Include="ReactiveUI">
-		  <Version>19.5.41</Version>
-	  </PackageVersion>
-	  <PackageVersion Include="ReactiveUI.Events.WPF" Version="15.1.1" />
-	  <PackageVersion Include="ReactiveUI.Fody">
-		  <Version>19.5.41</Version>
-	  </PackageVersion>
-	  <PackageVersion Include="ReactiveUI.Testing">
-		  <Version>19.5.41</Version>
-	  </PackageVersion>
-	  <PackageVersion Include="ReactiveUI.WPF">
-		  <Version>19.5.41</Version>
-	  </PackageVersion>
+    <PackageVersion Include="ReactiveUI">
+      <Version>19.5.41</Version>
+    </PackageVersion>
+    <PackageVersion Include="ReactiveUI.Events.WPF" Version="15.1.1" />
+    <PackageVersion Include="ReactiveUI.Fody">
+      <Version>19.5.41</Version>
+    </PackageVersion>
+    <PackageVersion Include="ReactiveUI.Testing">
+      <Version>19.5.41</Version>
+    </PackageVersion>
+    <PackageVersion Include="ReactiveUI.WPF">
+      <Version>19.5.41</Version>
+    </PackageVersion>
     <PackageVersion Include="Serilog" Version="3.1.1" />
     <PackageVersion Include="Serilog.Enrichers.Thread" Version="3.1.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="8.0.0" />
