--- a/Spriggit.Engine/Spriggit.Engine.csproj
+++ b/Spriggit.Engine/Spriggit.Engine.csproj
@@ -5,6 +5,7 @@
   <ItemGroup>
     <PackageReference Include="McMaster.NETCore.Plugins" />
     <PackageReference Include="Mutagen.Bethesda.Core" />
+    <PackageReference Include="Noggog.GitRepository" />
     <PackageReference Include="Noggog.SourceGenerators" />
     <PackageReference Include="Noggog.Testing" />
     <PackageReference Include="NuGet.Build.Tasks" />
