--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -57,4 +57,6 @@ nav:
   - Output: output.md
   - Installlation: installation.md
   - Command Line Interface: cli.md
+  - .spriggit File: spriggit-file.md
   - Translation Packages: translation-packages.md
+  - Merge Conflicts: merge-conflicts.md
