--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -2,45 +2,14 @@
 
     <PropertyGroup>
         <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-        <GitVersion>false</GitVersion>
         <TargetFramework>net7.0</TargetFramework>
         <Nullable>enable</Nullable>
         <WarningsAsErrors>nullable</WarningsAsErrors>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <ImplicitUsings>true</ImplicitUsings>
         <LangVersion>preview</LangVersion>
+        <VersionPrefix>0.19</VersionPrefix>
+        <VersionSuffix>zdev</VersionSuffix>
     </PropertyGroup>
-
-    <ItemGroup>
-        <PackageReference Include="GitInfo" >
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-    </ItemGroup>
-
-    <ItemGroup Condition=" '$(TargetFramework)' != 'netstandard2.0' ">
-        <PackageReference Include="NuGetizer" >
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-    </ItemGroup>
-
-    <!-- To be redefined by GitInfo after restore. -->
-    <Target Name="GitVersion" />
-
-    <Target Name="SetVersion"
-            BeforeTargets="GetAssemblyVersion;GetPackageVersion;GetAssemblyVersion;GenerateNuspec;GetPackageContents"
-            DependsOnTargets="GitVersion"
-            Returns="$(PackageVersion)">
-        <PropertyGroup>
-            <DevLabel Condition="$(GitCommits) != '0' And $(VersionSuffix) == ''">.1-zdev</DevLabel>
-            <DevLabel Condition="$(GitCommits) != '0' And $(VersionSuffix) != ''">.1-$(VersionSuffix)</DevLabel>
-            <AssemblyDevLabel Condition="$(GitCommits) != '0'">.1</AssemblyDevLabel>
-            <AssemblyVersion>$(GitBaseVersionMajor).$(GitBaseVersionMinor).$(GitBaseVersionPatch)$(AssemblyDevLabel)</AssemblyVersion>
-            <FileVersion>$(GitBaseVersionMajor).$(GitBaseVersionMinor).$(GitBaseVersionPatch)$(AssemblyDevLabel)</FileVersion>
-            <PackageVersion>$(GitBaseVersionMajor).$(GitBaseVersionMinor).$(GitBaseVersionPatch)$(DevLabel)</PackageVersion>
-            <InformationalVersion>$(PackageVersion)</InformationalVersion>
-        </PropertyGroup>
-    </Target>
 
 </Project>
