--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,6 +1,11 @@
 <Project>
   <ItemGroup>
     <PackageVersion Include="CommandLineParser" Version="2.9.1" />
+    <PackageVersion Include="GitInfo">
+      <Version>3.3.4</Version>
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
     <PackageVersion Include="McMaster.NETCore.Plugins">
       <Version>1.4.0</Version>
     </PackageVersion>
@@ -71,6 +76,11 @@
     </PackageVersion>
     <PackageVersion Include="NuGet.Packaging">
       <Version>6.5.0</Version>
+    </PackageVersion>
+    <PackageVersion Include="NuGetizer">
+      <Version>1.2.1</Version>
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
     <PackageVersion Include="NuGet.Protocol">
       <Version>6.9.1</Version>
