--- a/Spriggit.Tests/Spriggit.Tests.csproj
+++ b/Spriggit.Tests/Spriggit.Tests.csproj
@@ -1,4 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
+    
+    <PropertyGroup>
+        <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
+    </PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Microsoft.NET.Test.Sdk"/>
@@ -12,6 +16,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\Spriggit.Engine\Spriggit.Engine.csproj"/>
+        <ProjectReference Include="..\Spriggit.UI\Spriggit.UI.csproj" />
         <ProjectReference Include="..\Translation Packages\Spriggit.Yaml.Starfield\Spriggit.Yaml.Starfield.csproj"/>
     </ItemGroup>
     
