Spriggit.Tests.Windows

--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -32,8 +32,12 @@ jobs:
         exclude:
           - os: ubuntu-latest
             sln: Spriggit.sln
+          - os: ubuntu-latest
+            sln: Spriggit.Tests.Windows.sln
           - os: macos-latest
             sln: Spriggit.sln
+          - os: macos-latest
+            sln: Spriggit.Tests.Windows.sln
           - os: windows-latest
             sln: Spriggit.Linux.sln
           
