--- a/Spriggit.Tests.Windows/Spriggit.Tests.Windows.csproj
+++ b/Spriggit.Tests.Windows/Spriggit.Tests.Windows.csproj
@@ -37,6 +37,11 @@
         <DefaultPackFolder>content</DefaultPackFolder>
         <BuildAction>Compile</BuildAction>
       </Compile>
+      <Compile Update="Merge\FormIDCollisionFixerTests.cs">
+        <CodeLanguage>cs</CodeLanguage>
+        <DefaultPackFolder>content</DefaultPackFolder>
+        <BuildAction>Compile</BuildAction>
+      </Compile>
     </ItemGroup>
 
 </Project>
