--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -13,13 +13,13 @@
       <Version>17.10.0</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Core">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Kernel">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization">
       <Version>[1.22]</Version>
@@ -34,40 +34,40 @@
       <Version>[1.22]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Skyrim">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Oblivion">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Fallout4">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Starfield">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Testing">
-      <Version>[0.45.1.1-nightly-20240726-095782]</Version>
+      <Version>[0.45.1.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Autofac">
-      <Version>[2.65.0-nightly-20240725-051927]</Version>
+      <Version>[2.65.0-nightly-20240727-092271]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.CSharpExt">
-      <Version>[2.65.0-nightly-20240725-051927]</Version>
+      <Version>[2.65.0-nightly-20240727-092271]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.CSharpExt.Windows">
-      <Version>[2.65.0-nightly-20240725-051927]</Version>
+      <Version>[2.65.0-nightly-20240727-092271]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.GitRepository">
       <Version>1.2.0</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.Testing">
-      <Version>[2.65.0-nightly-20240725-051927]</Version>
+      <Version>[2.65.0-nightly-20240727-092271]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.WPF">
-      <Version>[2.65.0-nightly-20240725-051927]</Version>
+      <Version>[2.65.0-nightly-20240727-092271]</Version>
     </PackageVersion>
     <PackageVersion Include="Noggog.SourceGenerators">
-      <Version>[2.65.0-nightly-20240725-051927]</Version>
+      <Version>[2.65.0-nightly-20240727-092271]</Version>
     </PackageVersion>
     <PackageVersion Include="NuGet.Build.Tasks">
       <Version>6.10.1</Version>
