--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -66,6 +66,10 @@ jobs:
           
     steps:
     - uses: actions/checkout@v2
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 8.0.*
     - name: Install dependencies
       run: |
         dotnet clean ${{ matrix.sln }} -c Release && dotnet nuget locals all --clear
@@ -89,6 +93,10 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
+    - name: Setup .NET 8
+      uses: actions/setup-dotnet@v3
+      with:
+        dotnet-version: 8.0.*
     - name: Install dependencies
       run: |
         dotnet clean Spriggit.sln -c Release && dotnet nuget locals all --clear
