--- a/Spriggit.CLI.Lib/Spriggit.CLI.Lib.csproj
+++ b/Spriggit.CLI.Lib/Spriggit.CLI.Lib.csproj
@@ -13,21 +13,6 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Update="Commands\MergeVersionSyncerCommand.cs">
-        <CodeLanguage>cs</CodeLanguage>
-        <DefaultPackFolder>content</DefaultPackFolder>
-        <BuildAction>Compile</BuildAction>
-      </Compile>
-      <Compile Update="MergeVersionSyncerRunner.cs">
-        <CodeLanguage>cs</CodeLanguage>
-        <DefaultPackFolder>content</DefaultPackFolder>
-        <BuildAction>Compile</BuildAction>
-      </Compile>
-      <Compile Update="MergeVersionSyncerContainer.cs">
-        <CodeLanguage>cs</CodeLanguage>
-        <DefaultPackFolder>content</DefaultPackFolder>
-        <BuildAction>Compile</BuildAction>
-      </Compile>
       <Compile Update="Commands\SortProperties\SortPropertiesCommand.cs">
         <CodeLanguage>cs</CodeLanguage>
         <DefaultPackFolder>content</DefaultPackFolder>
@@ -39,6 +24,21 @@
         <BuildAction>Compile</BuildAction>
       </Compile>
       <Compile Update="Commands\SortProperties\SortPropertiesStarfield.cs">
+        <CodeLanguage>cs</CodeLanguage>
+        <DefaultPackFolder>content</DefaultPackFolder>
+        <BuildAction>Compile</BuildAction>
+      </Compile>
+      <Compile Update="Commands\MergeVersionSyncer\MergeVersionSyncerContainer.cs">
+        <CodeLanguage>cs</CodeLanguage>
+        <DefaultPackFolder>content</DefaultPackFolder>
+        <BuildAction>Compile</BuildAction>
+      </Compile>
+      <Compile Update="Commands\MergeVersionSyncer\MergeVersionSyncerRunner.cs">
+        <CodeLanguage>cs</CodeLanguage>
+        <DefaultPackFolder>content</DefaultPackFolder>
+        <BuildAction>Compile</BuildAction>
+      </Compile>
+      <Compile Update="Commands\MergeVersionSyncer\MergeVersionSyncerCommand.cs">
         <CodeLanguage>cs</CodeLanguage>
         <DefaultPackFolder>content</DefaultPackFolder>
         <BuildAction>Compile</BuildAction>
