Net9 and nuget bumps

--- a/Spriggit.UI/Spriggit.UI.csproj
+++ b/Spriggit.UI/Spriggit.UI.csproj
@@ -2,7 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
-        <TargetFramework>net8.0-windows</TargetFramework>
+        <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
 		<AssemblyName>Spriggit</AssemblyName>
