--- a/Translation Packages/Spriggit.Yaml.Oblivion/Spriggit.Yaml.Oblivion.csproj
+++ b/Translation Packages/Spriggit.Yaml.Oblivion/Spriggit.Yaml.Oblivion.csproj
@@ -3,6 +3,12 @@
 	<PropertyGroup>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<IsPackable>true</IsPackable>
+        <DebugType>portable</DebugType>
+        <DebugSymbols>true</DebugSymbols>
+        <PublishRepositoryUrl>true</PublishRepositoryUrl>
+        <EmbedUntrackedSources>true</EmbedUntrackedSources>
+        <IncludeSymbols>true</IncludeSymbols>
+        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
         <RootNamespace>Spriggit.Yaml.Oblivion</RootNamespace>
 	</PropertyGroup>
 
