--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -10,6 +10,9 @@
         <ImplicitUsings>true</ImplicitUsings>
         <LangVersion>preview</LangVersion>
     </PropertyGroup>
+    <ItemGroup>
+        <PackageReference Include="Microsoft.SourceLink.GitHub" PrivateAssets="All"/>
+    </ItemGroup>
 
     <ItemGroup>
         <PackageReference Include="GitInfo" >
