--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,10 +1,7 @@
 <Project>
   <ItemGroup>
     <PackageVersion Include="CommandLineParser" Version="2.9.1" />
-    <PackageVersion Include="GitInfo" PrivateAssets="all">
-      <Version>3.5.0</Version>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageVersion>
+      <PackageVersion Include="GitVersion.MsBuild" Version="6.0.5" />
     <PackageVersion Include="McMaster.NETCore.Plugins">
       <Version>1.4.0</Version>
     </PackageVersion>
@@ -78,11 +75,6 @@
     </PackageVersion>
     <PackageVersion Include="NuGet.Packaging">
       <Version>6.5.0</Version>
-    </PackageVersion>
-    <PackageVersion Include="NuGetizer">
-      <Version>1.2.1</Version>
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageVersion>
     <PackageVersion Include="NuGet.Protocol">
       <Version>6.12.1</Version>
