--- a/.github/workflows/ci-build.yml
+++ b/.github/workflows/ci-build.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - dev
-      - release
+      - main
       - prerelease
     paths-ignore:
       - 'docs/**'
@@ -12,7 +12,7 @@ on:
   pull_request:
     branches:
       - dev
-      - release
+      - main
       - prerelease
     paths-ignore:
       - 'docs/**'
@@ -43,6 +43,8 @@ jobs:
           
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
