Move deserialize/serialize CLI commands to core

--- a/Spriggit.Core/Spriggit.Core.csproj
+++ b/Spriggit.Core/Spriggit.Core.csproj
@@ -3,6 +3,7 @@
     <ItemGroup>
         <PackageReference Include="Noggog.CSharpExt" />
         <PackageReference Include="Mutagen.Bethesda.Kernel" />
+        <PackageReference Include="CommandLineParser" />
     </ItemGroup>
 
 </Project>
