--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -9,6 +9,7 @@
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
         <ImplicitUsings>true</ImplicitUsings>
         <LangVersion>preview</LangVersion>
+        <PackageOutputPath>./nupkg</PackageOutputPath>
     </PropertyGroup>
     
     <ItemGroup>
