--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,7 +1,7 @@
 <Project>
   <ItemGroup>
     <PackageVersion Include="CommandLineParser" Version="2.9.1" />
-      <PackageVersion Include="GitVersion.MsBuild" Version="6.0.5" />
+    <PackageVersion Include="GitVersion.MsBuild" Version="6.0.5" />
     <PackageVersion Include="McMaster.NETCore.Plugins">
       <Version>1.4.0</Version>
     </PackageVersion>
@@ -9,43 +9,44 @@
     <PackageVersion Include="Microsoft.NET.Test.Sdk">
       <Version>17.12.0</Version>
     </PackageVersion>
-      <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
+    <PackageVersion Include="Microsoft.SourceLink.GitHub" Version="8.0.0" PrivateAssets="All" />
     <PackageVersion Include="Mutagen.Bethesda">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Core">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Kernel">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Skyrim">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Oblivion">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Fallout4">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Starfield">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Testing">
-      <Version>[0.49.0-alpha.23]</Version>
+      <Version>[0.49.0-alpha.25]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization">
-      <Version>[1.29.0]</Version>
+      <Version>[1.30.0-alpha.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Newtonsoft">
-      <Version>[1.29.0]</Version>
+      <Version>[1.30.0-alpha.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.SourceGenerator">
-      <Version>[1.29.0]</Version>
+      <Version>[1.30.0-alpha.1]</Version>
     </PackageVersion>
     <PackageVersion Include="Mutagen.Bethesda.Serialization.Yaml">
-      <Version>[1.29.0]</Version>
+      <Version>[1.30.0-alpha.1]</Version>
     </PackageVersion>
+    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageVersion Include="Noggog.Autofac">
       <Version>[2.69]</Version>
     </PackageVersion>
@@ -111,6 +112,7 @@
     <PackageVersion Include="StrongInject">
       <Version>1.4.4</Version>
     </PackageVersion>
+    <PackageVersion Include="TestableIO.System.IO.Abstractions.Wrappers" Version="21.1.3" />
     <PackageVersion Include="xunit">
       <Version>2.9.2</Version>
     </PackageVersion>
