--- a/Translation Packages/Spriggit.Yaml.Fallout4/Spriggit.Yaml.Fallout4.csproj
+++ b/Translation Packages/Spriggit.Yaml.Fallout4/Spriggit.Yaml.Fallout4.csproj
@@ -1,6 +1,8 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <OutputType>exe</OutputType>
+        <PackAsTool>true</PackAsTool>
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <IsPackable>true</IsPackable>
         <DebugType>portable</DebugType>
@@ -9,7 +11,6 @@
         <EmbedUntrackedSources>true</EmbedUntrackedSources>
         <IncludeSymbols>true</IncludeSymbols>
         <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-        <RootNamespace>Spriggit.Yaml.Oblivion</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -23,6 +24,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\Spriggit.Core\Spriggit.Core.csproj" />
+        <ProjectReference Include="..\Spriggit.TranslationPackages\Spriggit.TranslationPackages.csproj" />
     </ItemGroup>
 
 </Project>
