--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -66,6 +66,15 @@ jobs:
           
     steps:
     - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v3.0.3
+      with:
+        versionSpec: '6.0.5'
+    - name: Determine Version
+      id: version_step # step id used as reference for output values
+      uses: gittools/actions/gitversion/execute@v3.0.3
     - name: Setup .NET
       uses: actions/setup-dotnet@v4
       with:
@@ -97,6 +106,13 @@ jobs:
       uses: actions/setup-dotnet@v4
       with:
         dotnet-version: 9.0.*
+    - name: Install GitVersion
+      uses: gittools/actions/gitversion/setup@v3.0.3
+      with:
+        versionSpec: '6.0.5'
+    - name: Determine Version
+      id: version_step # step id used as reference for output values
+      uses: gittools/actions/gitversion/execute@v3.0.3
     - name: Install dependencies
       run: |
         dotnet clean Spriggit.sln -c Release && dotnet nuget locals all --clear
