--- a/.github/workflows/ci-publish.yml
+++ b/.github/workflows/ci-publish.yml
@@ -139,15 +139,15 @@ jobs:
     - name: Archive GUI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: |
-        powershell Compress-Archive Spriggit.UI/bin/Release/net8.0-windows/win-x64/publish/* Spriggit.zip
+        powershell Compress-Archive Spriggit.UI/bin/Release/net9.0-windows/win-x64/publish/* Spriggit.zip
     - name: Archive Linux CLI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: |
-        powershell Compress-Archive Spriggit.CLI/bin/Release/net8.0/linux-x64/publish/* SpriggitLinuxCLI.zip
+        powershell Compress-Archive Spriggit.CLI/bin/Release/net9.0/linux-x64/publish/* SpriggitLinuxCLI.zip
     - name: Archive CLI
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       run: |
-        powershell Compress-Archive Spriggit.CLI/bin/Release/net8.0/win-x64/publish/* SpriggitCLI.zip
+        powershell Compress-Archive Spriggit.CLI/bin/Release/net9.0/win-x64/publish/* SpriggitCLI.zip
     - name: Publish GUI to Github
       if: ${{ success() && !github.event.release.prerelease && github.event_name == 'release' }}
       uses: svenstaro/upload-release-action@v2
@@ -169,3 +169,21 @@ jobs:
         file: SpriggitCLI.zip
         repo_token: ${{ secrets.GITHUB_TOKEN }}
         tag: ${{ github.event.release.tag_name }}
+    - name: Publish to Nuget.org
+      run: dotnet nuget push **/*.nupkg --api-key ${{ secrets.NUGET_API_KEY }} --source https://api.nuget.org/v3/index.json --no-symbols
+  
+  update-nightly:
+    needs: [build-test-push, activity-short-circuit]
+    if: needs.activity-short-circuit.outputs.same_sha == 'false'
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+      with:
+        fetch-depth: 0
+    - name: Reset nightly to release
+      run: |
+        head_sha=$(git rev-parse --verify HEAD)
+        echo "head_sha=$head_sha"
+        git checkout nightly
+        git reset --hard $head_sha
+        git push
