--- a/Spriggit.UI/Spriggit.UI.csproj
+++ b/Spriggit.UI/Spriggit.UI.csproj
@@ -2,6 +2,7 @@
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
+        <TargetFramework>net9.0</TargetFramework>
         <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
