--- a/Spriggit.CLI.Lib/Spriggit.CLI.Lib.csproj
+++ b/Spriggit.CLI.Lib/Spriggit.CLI.Lib.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Noggog.CSharpExt" />
         <PackageReference Include="CommandLineParser" />
