--- a/Spriggit.Tests.Windows/Spriggit.Tests.Windows.csproj
+++ b/Spriggit.Tests.Windows/Spriggit.Tests.Windows.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
         <TargetPlatformIdentifier>Windows</TargetPlatformIdentifier>
     </PropertyGroup>
 
