--- a/Spriggit/Spriggit.csproj
+++ b/Spriggit/Spriggit.csproj
@@ -1,5 +1,9 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
+    <PropertyGroup>
+        <TargetFramework>net9.0</TargetFramework>
+    </PropertyGroup>
+    
     <ItemGroup>
       <PackageReference Include="Mutagen.Bethesda.Serialization" />
     </ItemGroup>
