--- a/Translation Packages/Spriggit.Yaml.Oblivion/Spriggit.Yaml.Oblivion.csproj
+++ b/Translation Packages/Spriggit.Yaml.Oblivion/Spriggit.Yaml.Oblivion.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
         <OutputType>exe</OutputType>
         <PackAsTool>true</PackAsTool>
+        <TargetFramework>net9.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<IsPackable>true</IsPackable>
         <DebugType>portable</DebugType>
