--- a/Spriggit.UI/Spriggit.UI.csproj
+++ b/Spriggit.UI/Spriggit.UI.csproj
@@ -7,6 +7,7 @@
         <Nullable>enable</Nullable>
         <UseWPF>true</UseWPF>
 		<AssemblyName>Spriggit</AssemblyName>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
