--- a/Spriggit.CLI/Spriggit.CLI.csproj
+++ b/Spriggit.CLI/Spriggit.CLI.csproj
@@ -2,6 +2,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net9.0</TargetFramework>
+        <IsPackable>false</IsPackable>
     </PropertyGroup>
 
     <ItemGroup>
