--- a/Translation Packages/Spriggit.TranslationPackages/Spriggit.TranslationPackages.csproj
+++ b/Translation Packages/Spriggit.TranslationPackages/Spriggit.TranslationPackages.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Mutagen.Bethesda.Core" />
       <PackageReference Include="Serilog" />
         <PackageReference Include="Serilog.Sinks.Console" />
         <PackageReference Include="StrongInject" />
